--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -179,5 +179,6 @@
 
   "role.delete.confirm.msg": "Tem certeza que deseja deletar esse perfil de usuário?",
   "auth.login.wrong.email.or.password": "Seu email ou senhas estão incorretos ou você não está registrado no sistema",
-  "field.password.invalid": "Seu senha está errada"
+  "field.password.invalid": "Seu senha está errada",
+  "auth.login.user.not.active": "Você precisa validar a sua conta de usuário antes de entrar no sistema"
 }
